Toegevoegd state pijltje popular sectie via js veranderen

--- a/home.html
+++ b/home.html
@@ -233,7 +233,7 @@
 
             <div class="home-mozaik-title">
               <h2 class="display-inline">Most popular this week</h2>
-              <a href="#" class="more-arrow-link"><img id="more-arrow" class="display-inline" src="images/transparant.png" alt="arrow"></a>
+              <a href="#" onclick="Popular_switch()" class="more-arrow-link"><img id="more-arrow" class="display-inline" src="images/transparant.png" alt="arrow"></a>
             </div>
 
 
