Meer responsive gemaakt home page

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 
 
       <div class="container-nav-top">
-          <div class="top-nav row">
+          <div class="top-nav container row">
 
 
               <div class="top-nav-menu">
@@ -108,7 +108,7 @@
 
 
       <div class="container-nav-bottom">
-          <div class="bottom-nav row">
+          <div class="bottom-nav container row">
 
 
               <div class="bottom-nav-menu">
@@ -442,7 +442,7 @@
 
 
       <div class="container-nav-bottom">
-          <div class="bottom-nav row">
+          <div class="bottom-nav container row">
 
 
               <div class="bottom-nav-menu">
