Google tracking toegevoegd

--- a/home.html
+++ b/home.html
@@ -3,6 +3,16 @@
 
   <head>
 
+    <!-- Google Analytics tracking -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-2761314-92"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-2761314-92');
+    </script>
+
+
     <meta charset="utf-8">
     <title>Home Landoretti Art</title>
     <!-- Voor responsiveness, Bootstrap is mobile first -->
