H1 tag en description voor SEO toegevoegd home

--- a/home.html
+++ b/home.html
@@ -14,7 +14,8 @@
 
 
     <meta charset="utf-8">
-    <title>Home Landoretti Art</title>
+    <title>Landoretti Art: Buy or sell your amazing art!</title>
+    <meta name="description" content="At Landoretti Art, you can search for the most amazing art and make a bid. Or sell you art to the highest bidder. We have a wide variate of art available in all shapes and sizes.">
     <!-- Voor responsiveness, Bootstrap is mobile first -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -212,7 +213,7 @@
 
       <div class="container">
 
-          <h2 class="home-info-title">How does it work?</h2>
+          <h1 class="home-info-title">How does it work?</h1>
 
           <div class="row">
               <div class="col-lg-4 home-info-col">
