--- a/faq.html
+++ b/faq.html
@@ -166,130 +166,28 @@
 
       <!-- CONTENT -->
 
-      <div id="SliderHome" class="carousel slide" data-ride="carousel">
+      <div class="header">
 
-          <!-- indicators onderaan slider -->
-          <ol class="carousel-indicators">
-              <li data-target="#SliderHome" data-slide-to="0" class="active"></li>
-              <li data-target="#SliderHome" data-slide-to="1"></li>
-              <li data-target="#SliderHome" data-slide-to="2"></li>
-          </ol>
+        <img class="header-image" src="images/record-player-small.jpg" alt="record-player">
 
-          <!-- images slider -->
-          <div class="carousel-inner" role="listbox">
-
-              <div class="carousel-item active">
-                  <img class="d-block img-fluid" src="images/slider/art-gallery.jpg" alt="Slider image of art gallery">
-              </div>
-
-              <div class="carousel-item">
-                  <img class="d-block img-fluid" src="images/slider/vintage-camera.jpg" alt="Slider image of vintage camera">
-              </div>
-
-              <div class="carousel-item">
-                  <img class="d-block img-fluid" src="images/slider/record-player.jpg" alt="Slider image of of record player">
-              </div>
-
-          </div>
-
-          <!-- controls slider -->
-          <a class="carousel-control-prev" href="#SliderHome" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-          </a>
-
-          <a class="carousel-control-next" href="#SliderHome" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-          </a>
-
-
-          <img class="circle-icon" src="images/slider-bol-icon.png" alt="circle icon">
-          <div class="text-on-slider">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a.</p>
-          </div>
-
-      </div><!-- end carousel slider top -->
-
-
-
-
-      <div class="container">
-
-          <h1 class="home-info-title">How does it work?</h1>
-
-          <div class="row">
-              <div class="col-lg-4 home-info-col">
-                <img src="images/info-button-pencil.png" alt="Generic placeholder image">
-                <h4>Sign up</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              </div>
-
-              <div class="col-lg-4 home-info-col">
-                <img src="images/info-button-vinkje.png" alt="Generic placeholder image">
-                <h4>Make deals</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              </div>
-
-              <div class="col-lg-4 home-info-col">
-                <img src="images/info-button-smiley.png" alt="Generic placeholder image">
-                <h4>Everyone happy!</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              </div>
-          </div><!-- einde .row -->
+        <div class="header-auction">
+            <h4>Lorem ipsum</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. magnis dis parturient montes, nascetur ridiculus mus...</p>
+            <p><span>Price:</span> <span>€ 299,99</span></p>
+            <p>
+              <a href="#">VISIT AUCTION</a>
+              <a href="#"><img class="display-inline" src="images/pijltje-visit-auction.png" alt="arrow right"></a>
+            </p>
+        </div>
+        <img class="circle-icon-header" src="images/slider-bol-icon.png" alt="circle icon">
 
       </div>
 
 
-      <div class="container-mozaik">
-        <div class="container padding-0">
-
-
-            <div class="home-mozaik-title">
-              <h2 class="display-inline">Most popular this week</h2>
-              <a href="#" onclick="Popular_switch()" class="more-arrow-link"><img id="more-arrow" class="display-inline" src="images/transparant.png" alt="arrow"></a>
-            </div>
 
 
 
-            <div class="mozaik clearfix">
 
-                <div class="mozaik-image">
-                    <div class="position">
-                        <img src="images/ring-mozaik.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
-                        <div class="overlay flex-center">
-                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="mozaik-image mozaik-item-width2">
-                    <div class="position">
-                        <img src="images/klok-mozaik.jpg" class="img-fluid" alt="Dahli's melted clock">
-                        <div class="overlay flex-center">
-                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="mozaik-image">
-                    <div class="position">
-                        <img src="images/vrouw-mozaik.jpg" class="img-fluid " alt="Painting of woman">
-                        <div class="overlay flex-center">
-                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
-                        </div>
-                    </div>
-                </div>
-
-            </div><!-- einde mozaik -->
-
-
-        </div>
-      </div><!-- einde container mozaik -->
 
 
 
@@ -314,7 +212,7 @@
                 <p class="footer-title">HELP</p>
                 <p><a href="#">Terms of Service</a></p>
                 <p><a href="#">Privacy Policy</a></p>
-                <p><a href="faq.html">FAQ</a></p>
+                <p><a href="#">FAQ</a></p>
                 <p><a href="#">Contact Us</a></p>
                 <p><a href="#">About Us</a></p>
               </div>
