Toevoegen header image responsive final

--- a/faq.html
+++ b/faq.html
@@ -179,7 +179,7 @@
               <a href="#"><img class="display-inline" src="images/pijltje-visit-auction.png" alt="arrow right"></a>
             </p>
         </div>
-        <img class="circle-icon-header" src="images/slider-bol-icon.png" alt="circle icon">
+        <img class="circle-icon-header" src="images/slider-bol-icon-cropped.png" alt="circle icon">
 
       </div>
 
