FAQ breadcrumbs, titel, kader links, knop search toegevoegd

--- a/faq.html
+++ b/faq.html
@@ -163,9 +163,6 @@
 
 
 
-
-      <!-- CONTENT -->
-
       <div class="header">
 
         <img class="header-image" src="images/record-player-small.jpg" alt="record-player">
@@ -185,6 +182,46 @@
 
 
 
+
+      <!-- CONTENT -->
+
+      <div class="container padding-0 content-faq clearfix">
+
+        <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Frequently Asked Questions</a></p>
+
+        <h1>Find what you’re looking for?</h1>
+
+
+        <div class="row faq-links">
+
+          <div class="col">
+            <p><a href="#">How to bid?</a></p>
+            <p><a href="#">How to sell?</a></p>
+          </div>
+
+          <div class="col">
+            <p><a href="#">How to buy?</a></p>
+            <p><a href="#">How to register?</a></p>
+          </div>
+
+          <div class="col">
+            <p><a href="#">How to ask a question?</a></p>
+            <p><a href="#">What is a watchlist?</a></p>
+          </div>
+
+          <div class="col">
+            <p><a href="#">How to use a watchlist?</a></p>
+          </div>
+
+        </div>
+
+
+        <div class="search-faq">
+          <p class="display-inline">l SEARCH</p>
+          <img class="display-inline" src="images/pijltje-search-faq.png" alt="arrow-right">
+        </div>
+
+      </div>
 
 
 
