--- a/faq.html
+++ b/faq.html
@@ -185,7 +185,7 @@
 
       <!-- CONTENT -->
 
-      <div class="container padding-0 content-faq clearfix">
+      <div class="container padding-0 content-faq">
 
         <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Frequently Asked Questions</a></p>
 
@@ -216,15 +216,114 @@
         </div>
 
 
-        <div class="search-faq">
-          <p class="display-inline">l SEARCH</p>
-          <img class="display-inline" src="images/pijltje-search-faq.png" alt="arrow-right">
+        <div class="clearfix">
+          <div class="search-faq">
+
+            <p class="display-inline"><a href="#">l SEARCH</a></p>
+            <img class="display-inline" src="images/pijltje-search-faq.png" alt="arrow-right">
+
+          </div>
         </div>
 
+
+
+        <div class="questions-faq">
+
+          <div class="question">
+            <div class="row">
+              <p class="display-inline">Q</p>
+              <p class="display-inline">How to bid?</p>
+            </div>
+
+            <div class="row">
+              <p class="display-inline">A</p>
+              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="row">
+              <p class="display-inline">Q</p>
+              <p class="display-inline">How to sell?</p>
+            </div>
+
+            <div class="row">
+              <p class="display-inline">A</p>
+              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="row">
+              <p class="display-inline">Q</p>
+              <p class="display-inline">How to buy?</p>
+            </div>
+
+            <div class="row">
+              <p class="display-inline">A</p>
+              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="row">
+              <p class="display-inline">Q</p>
+              <p class="display-inline">How to register?</p>
+            </div>
+
+            <div class="row">
+              <p class="display-inline">A</p>
+              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="row">
+              <p class="display-inline">Q</p>
+              <p class="display-inline">How to ask a question?</p>
+            </div>
+
+            <div class="row">
+              <p class="display-inline">A</p>
+              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="row">
+              <p class="display-inline">Q</p>
+              <p class="display-inline">What is a watchlist?</p>
+            </div>
+
+            <div class="row">
+              <p class="display-inline">A</p>
+              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="row">
+              <p class="display-inline">Q</p>
+              <p class="display-inline">How to use a watchlist?</p>
+            </div>
+
+            <div class="row">
+              <p class="display-inline">A</p>
+              <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+            </div>
+          </div>
+
+
+        </div><!-- end container content -->
+
+
       </div>
-
-
-
 
 
 
