--- a/faq.html
+++ b/faq.html
@@ -14,8 +14,8 @@
 
 
     <meta charset="utf-8">
-    <title>Landoretti Art: Buy or sell your amazing art!</title>
-    <meta name="description" content="At Landoretti Art, you can search for the most amazing art and make a bid. Or sell you art to the highest bidder. We have a wide variate of art available in all shapes and sizes.">
+    <title>FAQ for Landoretti Art</title>
+    <meta name="description" content="Not sure how to buy an artpiece? Or sell it? How to make a watchlist or how to use it? Take a look at the FAQ for Landoretti Art.">
     <!-- Voor responsiveness, Bootstrap is mobile first -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
