Toegevoegd algemeen bovenste stuk van alle content, form opmaak

--- a/faq.html
+++ b/faq.html
@@ -127,13 +127,13 @@
 
                   <ul class="nav">
                       <li class="nav-item-bottom">
-                        <a class="nav-link active" href="#">HOME</a>
+                        <a class="nav-link active" href="home.html">HOME</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">ART</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">ISEARCH</a>
+                        <a class="nav-link" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYAUCTIONS</a>
@@ -185,31 +185,31 @@
 
       <!-- CONTENT -->
 
-      <div class="container padding-0 content-faq">
+      <div class="container padding-0 content-page">
 
         <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Frequently Asked Questions</a></p>
 
         <h1>Find what you’re looking for?</h1>
 
 
-        <div class="row faq-links">
+        <div class="row frame">
 
-          <div class="col">
+          <div class="col faq-links">
             <p><a href="#">How to bid?</a></p>
             <p><a href="#">How to sell?</a></p>
           </div>
 
-          <div class="col">
+          <div class="col faq-links">
             <p><a href="#">How to buy?</a></p>
             <p><a href="#">How to register?</a></p>
           </div>
 
-          <div class="col">
+          <div class="col faq-links">
             <p><a href="#">How to ask a question?</a></p>
             <p><a href="#">What is a watchlist?</a></p>
           </div>
 
-          <div class="col">
+          <div class="col faq-links">
             <p><a href="#">How to use a watchlist?</a></p>
           </div>
 
@@ -219,7 +219,7 @@
         <div class="clearfix">
           <div class="search-faq">
 
-            <p class="display-inline"><a href="#">l SEARCH</a></p>
+            <p class="display-inline"><a href="search.html">I SEARCH</a></p>
             <img class="display-inline" src="images/pijltje-search-faq.png" alt="arrow-right">
 
           </div>
@@ -497,13 +497,13 @@
 
                   <ul class="nav">
                       <li class="nav-item-bottom">
-                        <a class="nav-link active" href="#">HOME</a>
+                        <a class="nav-link active" href="home.html">HOME</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">ART</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">ISEARCH</a>
+                        <a class="nav-link" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYAUCTIONS</a>
