Toegevoegd pagina navigatie subheader search pagina

--- a/search.html
+++ b/search.html
@@ -192,7 +192,7 @@
         <h1>I search</h1>
 
 
-        <h4>Add a request:</h4>
+        <h4>Add a request</h4>
 
 
         <form class="form-search" action="search.html" method="post">
@@ -216,6 +216,7 @@
             </div>
           </div>
 
+
           <div class="row">
             <div class="col col-lg-9">
               <input type="text" placeholder="Lorem ipsum, dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore" name="info-art" required>
@@ -233,12 +234,25 @@
             </div>
           </div>
 
-
-          </form>
-
+        </form>
 
 
 
+        <div class="row justify-content-between">
+            <div class="col-2">
+              <h4>Overview</h4>
+            </div>
+            <div class="col-2">
+              <p class="pages">
+                <a href="#"><</a>
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a class="active" href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">></a>
+              </p>
+            </div>
+          </div>
 
 
 
